# seamm-cookiecutter

./: .buildinfo  .travis.yml  .yapfignore  HISTORY.rst  MANIFEST.in  Makefile  README.rst  console_script_setup.html  cookiecutter.json  genindex.html  index.html  objects.inv  prompts.html  py-modindex.html  pypi_release_checklist.html  readme.html  requirements_dev.txt  search.html  searchindex.js  setup.cfg  setup.py  troubleshooting.html  tutorial.html
.doctrees/: console_script_setup.doctree  environment.pickle  index.doctree  prompts.doctree  pypi_release_checklist.doctree  readme.doctree  troubleshooting.doctree  tutorial.doctree
.doctrees/developer/: modules.doctree  seamm_cookiecutter.doctree
.github/workflows/: BranchCI.yaml  CI.yaml  Release.yaml  codeql.yml
_sources/developer/: seamm_cookiecutter.rst.txt
_static/: documentation_options.js
dev/: index.html  versions.html
developer/: modules.html  seamm_cookiecutter.html
devtools/conda-envs/: test_env.yaml
docs/: buildDocs.sh  conf.py  index.rst  prompts.rst
hooks/: post_gen_project.py  pre_gen_project.py
seamm_cookiecutter/: __init__.py  _version.py  seamm_cookiecutter.py
seamm_cookiecutter/plug-in/: cookiecutter.json
seamm_cookiecutter/substep/: cookiecutter.json
tests/: test_1.py  test_bake_project.py
{{cookiecutter.project_slug}}/: .travis.yml  LICENSE  requirements_dev.txt  setup.py
{{cookiecutter.repo_name}}/: .travis.yml  .yapfignore  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  requirements_dev.txt  setup.py  tox.ini  travis_pypi_setup.py
(+122 files in other folders)
