[aliases]
test = pytest

[bdist_wheel]
universal = 1

[coverage:run]
# .coveragerc to control coverage.py and pytest-cov
omit =
    # Omit the tests
    */tests/*
    # Omit generated versioneer
    seamm_cookiecutter/_version.py

[flake8]
exclude = docs,	seamm_cookiecutter/plug-in
max-line-length = 88
extend-ignore = E203

[versioneer]
# Automatic version numbering scheme
VCS = git
style = pep440
versionfile_source = seamm_cookiecutter/_version.py
versionfile_build = seamm_cookiecutter/_version.py
tag_prefix = ''

[metadata]
description_file = README.rst
